--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <script src="final.js"></script>
+    <script src="dist/final.js"></script>
+
+    <script>
+        const a = true
+    </script>
 </body>
 
 </html>
