--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="dist/final.js"></script>
+    <script src="dist/main.js"></script>
 
     <script>
         const a = true
